better ant opts more missing sources